--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -313,6 +313,21 @@
                 android:layout_width="30dp"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="存道数量:"
+                android:textSize="@dimen/textNormSize" />
+
+            <TextView
+                android:id="@+id/tv_numOfSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textNormSize" />
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
