--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -254,6 +254,19 @@
                             android:text="100"
                             android:textSize="@dimen/textSize" />
                     </LinearLayout>
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <Button
+                            android:id="@+id/btn_hardwaregain"
+                            android:layout_gravity="center"
+                            android:textSize="@dimen/textSize"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="前放增益"/>
+                    </LinearLayout>
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="0dp"
@@ -316,7 +329,7 @@
                             android:layout_height="35dp"
                             android:onClick="btn_horizongtalGain"
                             android:text="水平"
-                            android:textSize="4sp" />
+                            android:textSize="8sp" />
                         <Button
                             android:layout_gravity="center"
                             android:id="@+id/btn_stable_gain"
@@ -325,13 +338,13 @@
                             android:layout_height="35dp"
                             android:onClick="btn_stableKGain"
                             android:text="步进"
-                            android:textSize="4sp" />
+                            android:textSize="8sp" />
                         <TextView
                             android:layout_gravity="center"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:textSize="5sp"
+                            android:textSize="8sp"
                             android:text="系数"/>
 
                         <EditText
@@ -351,7 +364,7 @@
                             android:layout_height="35dp"
                             android:onClick="btn_gain_apply"
                             android:text="应用"
-                            android:textSize="4sp" />
+                            android:textSize="8sp" />
 
                     </LinearLayout>
                     <View
@@ -360,7 +373,7 @@
                         android:background="#000"/>
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <CheckBox
                             android:id="@+id/checkbox_backremove"
@@ -403,7 +416,7 @@
                             android:layout_weight="1"
                             android:onClick="btn_dynamic_backgrd"
                             android:text="背景去噪"
-                            android:textSize="5sp" />
+                            android:textSize="8sp" />
                         <!--                        <Button-->
                         <!--                            android:id="@+id/btn_background_remove"-->
                         <!--                            android:layout_width="40dp"-->
@@ -506,7 +519,7 @@
                             android:layout_height="35dp"
                             android:text="应用"
                             android:onClick="btn_lowhighf_apply"
-                            android:textSize="5sp"
+                            android:textSize="8sp"
                             ></Button>
 
                     </LinearLayout>
@@ -526,7 +539,7 @@
                             android:text="处理恢复默认"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
-                            android:textSize="5sp"
+                            android:textSize="8sp"
                             android:includeFontPadding="false"
                             android:onClick="btn_renew_filter"/>
                         <Button
@@ -536,7 +549,7 @@
                             android:text="保存参数"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
-                            android:textSize="5sp"
+                            android:textSize="8sp"
                             android:includeFontPadding="false"
                             android:onClick="btn_save_params"/>
                         <Button
@@ -546,7 +559,7 @@
                             android:text="导入参数"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
-                            android:textSize="5sp"
+                            android:textSize="8sp"
                             android:includeFontPadding="false"
                             android:onClick="btn_import_params"/>
                     </LinearLayout>
